[package]
name = "example-can-loopback"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["staticlib"]
bench = false
test = false

[dependencies]
bitflags.workspace = true
bw-r-drivers-tc37x.workspace = true
defmt.workspace = true
futures.workspace = true
pxros.workspace = true
veecle-pxros = { workspace = true, features = ["rt"] }
