[package]
name = "example-hello-world"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["staticlib"]
bench = false
test = false

[dependencies]
bitflags.workspace = true
defmt.workspace = true
futures.workspace = true
pxros.workspace = true
veecle-pxros = { workspace = true, features = ["rt"] }
